--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -23,20 +23,14 @@ map $sent_http_content_type $expires {
 }
 upstream strapi {
     least_conn;
-    server 192.168.1.181:9337 max_fails=3 fail_timeout=60 weight=1;
+    server 10.0.0.168:1337 max_fails=3 fail_timeout=60 weight=1;
 }
 
 upstream ui {
     least_conn;
 
-    server 192.168.1.181:3000 max_fails=3 fail_timeout=60 weight=1;
+    server 10.0.0.168:3000 max_fails=3 fail_timeout=60 weight=1;
 }
-
-#  upstream api {
-#     least_conn;
-
-#     server my_api:1337 max_fails=3 fail_timeout=60 weight=1;
-# }
 
 ssl_session_cache shared:SSL:50m;
 ssl_session_timeout 10m;
@@ -46,7 +40,7 @@ ssl_ciphers "ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES
 
 server {
     listen 80 default_server;
-    server_name 192.168.1.181;
+    server_name 10.0.0.168;
     
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -59,7 +53,7 @@ server {
 server {
     # listen 443;
     listen 443 ssl;
-    server_name 192.168.1.181;
+    server_name 10.0.0.168;
 
     keepalive_timeout   70;
     client_max_body_size 8M;
@@ -80,7 +74,7 @@ server {
         proxy_pass http://ui/;
     }
 
-    location ~ ^/gapi(/?)(.*) {
+    location ~ ^/api(/?)(.*) {
         # remove the gapi from url and redirect
         # set name as gapi because in next.js there is an api route
         proxy_pass http://strapi/$2$is_args$args;
@@ -94,6 +88,8 @@ server {
     }
     
     location /cms/ {
+    # location ~ ^/cms(/?)(.*) {
+        # proxy_pass http://strapi/$2$is_args$args;
         rewrite ^/cms/?(.*)$ /$1 break;
         proxy_pass http://strapi;
         proxy_http_version 1.1;
