--- a/cms/.env
+++ b/cms/.env
@@ -1,9 +1,9 @@
 HOST=0.0.0.0
 PORT=1337
-APP_KEYS=vWn+4dAeh0vJIlhbwERr5w==,WBo2y1zJOXd6CWcT7VJXzA==,Sz0xXicNS0PimrQtvBF6qg==,RWqUdqir6P+dKhRtHCWdZw==
-API_TOKEN_SALT=ci1S/knShfC6yVX8M/iOMg==
-ADMIN_JWT_SECRET=6zOp1v7u4JjJW+v79WqJug==
-TRANSFER_TOKEN_SALT=C6PRaHVJHF2HMa3NZDAkUQ==
+APP_KEYS=
+API_TOKEN_SALT=
+ADMIN_JWT_SECRET=
+TRANSFER_TOKEN_SALT=
 # Database
 DATABASE_CLIENT=sqlite
 DATABASE_FILENAME=.tmp/data.db
@@ -13,9 +13,9 @@ DATABASE_FILENAME=.tmp/data.db
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
 DATABASE_NAME=strapi
-DATABASE_USERNAME=dbuser
-DATABASE_PASSWORD=dbpassword
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
 NODE_ENV=development
 DATABASE_CLIENT=mysql
 # @strapi-community/dockerize end variables 
-JWT_SECRET=JC5aPFeihEhDrmhkvO4zUA==
+JWT_SECRET=
