--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 HOST=0.0.0.0
 PORT=1337
-APP_KEYS=yCCWExcYJ9mtqvOJqVidLQ==,HV+WTfz3+7gsnqCVYcE8PQ==,L+2R1taejqf0o0DsuPl7qA==,K9Ohqr/wFqqurfoIpf8wxQ==
-API_TOKEN_SALT=l4Vw4nVEBLarLZU9aOcM4w==
-ADMIN_JWT_SECRET=yVPkPwGqoFQjgfHmTGVQRA==
-TRANSFER_TOKEN_SALT=q4i5NmooYYyJocdBTYPCCw==
+APP_KEYS=
+API_TOKEN_SALT=
+ADMIN_JWT_SECRET=
+TRANSFER_TOKEN_SALT=
 # Database
 DATABASE_CLIENT=sqlite
 DATABASE_FILENAME=.tmp/data.db
@@ -13,9 +13,9 @@ DATABASE_FILENAME=.tmp/data.db
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
 DATABASE_NAME=strapi
-DATABASE_USERNAME=dbuser
-DATABASE_PASSWORD=dbpassword
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
 NODE_ENV=development
 DATABASE_CLIENT=mysql
 # @strapi-community/dockerize end variables 
-JWT_SECRET=3EhfYUPCvCbmavxQYe5kTg==
+JWT_SECRET=
