--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-*/ssl
-!ssl/*.ps1
+strapi/
+
+*.bak
+*/log/
+.ignore
+.env
+certbot/*/accounts*
+cms/src/
+
+*.csr
+*.crt
+*.key
+!*/ssl/keys.ps1
 
 # dependencies
 node_modules/
@@ -10,16 +21,22 @@ node_modules/
 # testing
 /coverage
 
+# next.js
+/.next/
+/out/
+
 # production
 /build
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.pem
+.env.*
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
