--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,78 +1,73 @@
 version: '3'
 
 volumes:
-  cms-data:
+  html:
+  dhparam:
+  vhost:
+  certs:
+  conf:
+  strapi-data:
 
 networks:
-  cms:
-    name: Cms
+  strapi:
+    name: Strapi
     driver: bridge
 
 services:
   proxy:
-    container_name: proxy.cms.localhost.com
+    container_name: proxy.localhost
     image: nginx:stable
-    volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      - ./nginx/ssl:/etc/nginx/ssl
     ports:
       - '80:80'
       - '443:443'
+    volumes:
+      - ./nginx/conf.local:/etc/nginx/conf.d
+      # generate self signed certs for local development
+      - ./nginx/certs:/etc/nginx/certs/:ro
     networks:
-      - cms
+      - strapi
 
   frontend:
-    environment:
-      - NODE_ENV=development
-      - WATCHPACK_POLLING=true
     build:
       context: ./front
       dockerfile: Dockerfile
+    environment:
+      NODE_ENV: development
+      WATCHPACK_POLLING: true
     ports:
       - '3000:3000'
     volumes:
       - ./front/src:/app/src
       - ./front/public:/app/public
-      # - ./ssl:/etc/ssl
     command: npm run start
     networks:
-      - cms
+      - strapi
 
-  cms:
-    container_name: cms
-    build:
-      context: ./cms
-      dockerfile: Dockerfile
-    image: cms:latest
+  strapi:
+    container_name: strapi
+    build: .
+    image: strapi:latest
     restart: unless-stopped
     env_file: .env
     environment:
-      DATABASE_CLIENT: ${DATABASE_CLIENT}
-      DATABASE_HOST: cmsDB
-      DATABASE_NAME: ${DATABASE_NAME}
-      DATABASE_USERNAME: ${DATABASE_USERNAME}
-      DATABASE_PORT: ${DATABASE_PORT}
-      JWT_SECRET: ${JWT_SECRET}
-      ADMIN_JWT_SECRET: ${ADMIN_JWT_SECRET}
-      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
-      NODE_ENV: ${NODE_ENV}
+      DATABASE_HOST: strapiDB
     volumes:
-      - ./cms/config:/opt/app/config
-      - ./cms/src:/opt/app/src
-      - ./cms/package.json:/opt/package.json
-      - ./cms/package-lock.json:/opt/package-lock.json
+      - ./strapi/config:/opt/app/config
+      - ./strapi/src:/opt/app/src
+      - ./strapi/package.json:/opt/package.json
+      - ./strapi/package-lock.json:/opt/package-lock.json
 
-      - ./cms/.env:/opt/app/.env
-      - ./cms/public/uploads:/opt/app/public/uploads
+      - ./.env:/opt/app/.env
+      - ./strapi/public/uploads:/opt/app/public/uploads
     ports:
       - '1337:1337'
     networks:
-      - cms
+      - strapi
     depends_on:
-      - cmsDB
+      - strapiDB
       
-  cmsDB:
-    container_name: cmsDB
+  strapiDB:
+    container_name: strapiDB
     platform: linux/amd64 #for platform error on Apple M1 chips
     restart: unless-stopped
     env_file: .env
@@ -84,23 +79,22 @@ services:
       MYSQL_PASSWORD: ${DATABASE_PASSWORD}
       MYSQL_DATABASE: ${DATABASE_NAME}
     volumes:
-      - cms-data:/var/lib/mysql
+      - strapi-data:/var/lib/mysql
       #- ./data:/var/lib/postgresql/data/ # if you want to use a bind folder
     ports:
       - '3306:3306'
     networks:
-      - cms
+      - strapi
       
-  cmsAdminer:
-    container_name: cmsAdminer
+  strapiAdminer:
+    container_name: strapiAdminer
     image: adminer
     restart: unless-stopped
     ports:
       - '9090:8080'
     environment:
-      - ADMINER_DEFAULT_SERVER=cmsDB
+      - ADMINER_DEFAULT_SERVER=strapiDB
     networks:
-      - cms
+      - strapi
     depends_on:
-      - cmsDB
-
+      - strapiDB
